# Machine-Learning-to-detect-bottle-caps

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
bsort/: _init_.py  cli.py  config.py  model.py  train.py  utils.py
configs/: settings.yaml
notebooks/: Untitled1 (1).ipynb
tests/: test_config.py  test_infer.py  test_train.py
