[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bsort"
version = "0.1.0"
description = "Bottle cap color detection pipeline"
dependencies = [
    "ultralytics",
    "opencv-python",
    "pyyaml",
    "wandb",
    "click",
    "pytest",
]

[project.scripts]
bsort = "bsort.cli:main"
