[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "bsort"
version = "0.1.0"
description = "Bottle cap detector ML pipeline"
authors = [
  { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ultralytics",
    "opencv-python",
    "pyyaml",
    "wandb",
    "pydantic",
]

[project.scripts]
bsort = "bsort.cli:app"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
